# calibrateKinectv2

./: .cproject  .gitignore  .project  CMakeLists.txt  calibrateKinect  cmake_install.cmake  par.txt  sample  test.xml
include/: k2g.h
src/: calibrateKinect.cpp
